--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "2.6.10"
     },
     "dependencies": {
-        "tailwindcss": "1.0.5"
+        "laravel-mix-tailwind": "0.1.0",
+        "tailwindcss": "1.1.0"
     }
 }
